# Fvwm95-Forever

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
docs/html/: FvwmAudio.html  FvwmBanner.html  FvwmButtons.html  FvwmConsole.html  FvwmCpp.html  FvwmDebug.html  FvwmForm.html  FvwmIconBox.html  FvwmIconMan.html  FvwmIdent.html  FvwmM4.html  FvwmPager.html  FvwmSave.html  FvwmSaveDesk.html  FvwmScript.html  FvwmScroll.html  FvwmTalk.html  FvwmTaskBar.html  FvwmWharf.html  FvwmWinList.html  fvwm95.html  index.html
docs/modules/: FvwmAudio-README.txt  FvwmBacker-README.txt
docs/modules/FvwmButtons/: BUGS  CHANGES  README  TODO
docs/modules/FvwmConsole/: README
docs/modules/FvwmForm/: README
docs/modules/FvwmIconBox/: CHANGES  COPYRIGHT  TO-DO
docs/modules/FvwmIconMan/: CHANGES  README
docs/modules/FvwmSaveDesk-examples/: fvwmrc
docs/modules/FvwmScript/: README  system.fvwmrc
docs/modules/FvwmTaskBar/: EXAMPLE.fvwmrc  FvwmTaskBar-plugins.patch.README  INSTALL  NEW  README  TODO  (+1 more)
docs/random/: INSTALL  README  README.mini  color_combos  error_codes  fvwm-StackingOrder.html  fvwm95-2.xx.lsm  fvwm95.lsm  modules.tex  system.fvwm95rc.in
fvwm/: add_window.c  bindings.c  borders.c  builtins.c  colormaps.c  colors.c  complex.c  decorations.c  events.c  focus.c  functions.c  fvwm.c  fvwm.h  fvwm95.man  icons.c  menus.c  menus.h  misc.c  misc.h  module.c  move.c  parse.h  placement.c  read.c  resize.c  screen.h  style.c  virtual.c  windows.c
include/: FVWMconfig.h.in  decorations.h  shims.h
include/fvwm/: fvwmlib.h
libs/: GetFdWidth.c  GetFont.c  GetLine.c  Picture.c  ReadPacket.c  SendInfo.c  SendText.c  SetMask.c  envvar.c  findIconFile.c  hostname.c  mygetostype.c  safemalloc.c  shims.c  sleep.c  strutils.c  wild.c
mini-icons/: green.xpm  mini-chrome.xpm  mini-chromium.xpm  mini-wilber16.xpm
modules/FvwmAudio/: FvwmAudio.c  FvwmAudio.man
modules/FvwmAuto/: FvwmAuto.c  FvwmAuto.man
modules/FvwmBacker/: FvwmBacker.c  FvwmBacker.h  Mallocs.c  Mallocs.h  root_bits.c
modules/FvwmBanner/: FvwmBanner.c  FvwmBanner.man
modules/FvwmButtons/: FvwmButtons.c  FvwmButtons.h  FvwmButtons.man  button.c  draw.c  draw.h  icons.c  misc.c  output.c  parse.c  parse.h
modules/FvwmConsole/: FvwmConsole.c  FvwmConsole.h  FvwmConsole.man  FvwmConsoleC.c  getline.c
modules/FvwmCpp/: FvwmCpp.c  FvwmCpp.man
modules/FvwmDebug/: FvwmDebug.c  FvwmDebug.h  FvwmDebug.man
modules/FvwmForm/: FvwmForm.c  FvwmForm.man
modules/FvwmIconBox/: FvwmIconBox.c  FvwmIconBox.h  FvwmIconBox.man  icons.c
modules/FvwmIconMan/: FvwmIconMan.c  FvwmIconMan.man  fvwm.c  globals.c  winlist.c  xmanager.c
modules/FvwmIdent/: FvwmIdent.c  FvwmIdent.h  FvwmIdent.man
modules/FvwmM4/: FvwmM4.c  FvwmM4.h  FvwmM4.man
modules/FvwmPager/: FvwmPager.c  FvwmPager.h  FvwmPager.man  x_pager.c
modules/FvwmSave/: FvwmSave.c  FvwmSave.h  FvwmSave.man
modules/FvwmSaveDesk/: FvwmSaveDesk.c  FvwmSaveDesk.h  FvwmSaveDesk.man
modules/FvwmScript/: FvwmScript.c  FvwmScript.man  Instructions.c  bison.y  flex.l  libyywrap.c  types.h
modules/FvwmScroll/: FvwmScroll.c  FvwmScroll.h  FvwmScroll.man  GrabWindow.c
modules/FvwmTalk/: FvwmTalk.c  FvwmTalk.h  FvwmTalk.man
modules/FvwmTaskBar/: BatStatModule.c  ButtonArray.c  ButtonArray.h  CheckLockModule.c  Colors.c  Colors.h  FvwmTaskBar.c  FvwmTaskBar.h  FvwmTaskBar.man  Goodies.c  GoodyLoadable.c  GoodyLoadable.h  GoodyModule.c  List.c  List.h  MailCheckModule.c  Mallocs.c  Mallocs.h  ShowDateModule.c  Start.c
modules/FvwmWharf/: FvwmWharf.c  FvwmWharf.man  Wharf.h  icons.c  stepgfx.c  stepgfx.h
modules/FvwmWinList/: ButtonArray.c  ButtonArray.h  Colors.c  FvwmWinList.c  FvwmWinList.h  FvwmWinList.man  List.c  List.h  Mallocs.c  Mallocs.h
sample.fvwmrc/: system.fvwm95rc.in
utils/: fvwmrc_convert  makemakefileam.sh  quantize_pixmaps  xpmroot.c
(+32 files in other folders)
